# cupti-simple

./: CMakeLists.txt  README.md  vec_add.cu
cmake/: FindCUPTI.cmake
